--- a/_sass/custom/_syntax-highlighting.scss
+++ b/_sass/custom/_syntax-highlighting.scss
@@ -8,7 +8,6 @@ figure.highlight, div.highlight {
 	margin: $padding;
 	background-color: $color-neutral-04;
 	color: $color-neutral-01;
-	overflow: scroll;
 	border-radius: $border-radius; 
 
 	.lineno {
